--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>StudyQuest - Your Gamified Productivity Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-     <link rel="icon" type="image/png" href="icon2_192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="icon2_512x512.png" sizes="512x512">
+     <link rel="icon" type="image/png" href="StudyQuest.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="StudyQuest.png" sizes="512x512">
 
-    <link rel="apple-touch-icon" href="icon2_180x180.png">
+    <link rel="apple-touch-icon" href="StudyQuest.png">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
@@ -4537,3 +4537,4 @@
     </script>
 </body>
 </html>
+
